Lab 2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: hw-demo-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hw-demo-service
          servicePort: 8080
        path: /hw-demo
