Lab 2/ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: hello-world-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hello-world-service
          servicePort: 8080
        path: /hello-world
